--- a/src/styles/organisms/card.module.css
+++ b/src/styles/organisms/card.module.css
@@ -1,34 +1,51 @@
-#card {
-  width: 250px;
-  height: 320px;
- padding-top: 10px;
-  background-color: var(--color-blue-primary);
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  color: white;
-  border-radius: var(--border-radius);
+.card {
+    width: 250px;
+    height: 350px;
+    padding-top: 10px;
+    background-color: #f8f3df;
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: 1fr auto 1fr;
+    color: black;
+    /*bordersettings*/
+    border-style: solid;
+    border-radius: var(--border-radius);
+    border-width: 2px;
+    border-color: #f2ab6a;
+    padding-bottom: 10px;
 }
 
-#card_image {
+.card_image {
   grid-area: 1/2;
   border-radius: var(--border-radius);
-
-}
-
-#card_info {
-    grid-area: 2/1/3/4;
     padding: 0 10px;
-    display: grid;
-    grid-template-rows: 1fr auto;
-    row-gap: 10px;
 }
 
-#card_title {
+.card_bottom {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    allign-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+
+.card_info {
+
+}
+
+.card_like {
+    height: 100px;
+    width: 100px;
+}
+
+.card_title {
   font-size: 1.5em;
   font-weight: 600;
+    width: 70%;
 }
 
-#card_description {
+.card_description {
   font-size: 1em;
   font-weight: 500;
 }
