--- a/src/styles/organisms/card.module.css
+++ b/src/styles/organisms/card.module.css
@@ -3,10 +3,9 @@
     height: 350px;
     padding-top: 10px;
     background-color: #f8f3df;
-    display: flex;
-    flex-direction: column;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-columns:  auto 1fr;
     color: black;
+    display: grid;
     /*bordersettings*/
     border-style: solid;
     border-radius: var(--border-radius);
@@ -16,21 +15,25 @@
 }
 
 .card_image {
-  grid-area: 1/2;
+  grid-area: 1/1;
   border-radius: var(--border-radius);
     padding: 0 10px;
 }
 
 .card_bottom {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-area: 2/1;
+    height: auto;
     allign-items: center;
     justify-content: space-between;
     padding: 0 10px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .card_info {
+    grid-area: 3/1;
 
 }
 
