--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,8 @@ h6 {
   overflow-wrap: break-word;
 }
 main {
-min-height: 350px;}
+min-height: 350px;
+ }
 /*
   9. Create a root stacking context
 */
