--- a/src/styles/organisms/navBar.module.css
+++ b/src/styles/organisms/navBar.module.css
@@ -4,6 +4,7 @@
     grid-template-columns: min-content auto min-content;
     align-items: center;
     justify-items: center;
+    background-color: #f8af6c;
 }
 
 /* Logo */
