dit is gwn nice homepaginatje bruurtje

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -96,3 +96,5 @@ a {
   --border-radius: 5px;
   font-family: 'Inter', sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
