--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@ h6 {
   overflow-wrap: break-word;
 }
 main {
-min-height: fit-content;
+min-height: 100vh;
   background-color: #fffef9;
  }
  @media only screen and (max-width: 992px) {
