--- a/src/app/swipe/page.module.css
+++ b/src/app/swipe/page.module.css
@@ -1,11 +1,10 @@
 #wrapper_div {
     display: grid;
-    grid-template-columns: 1fr auto 1fr auto;
-    width: 100%;
-    
-
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
 }
 #listings {
-    grid-area: 1/3;
-    
+    width: 260px;
+    height: 350px;
 }
