--- a/src/styles/organisms/navBar.module.css
+++ b/src/styles/organisms/navBar.module.css
@@ -32,6 +32,10 @@
     transition: opacity .2s ease;
 }
 
+.link ~ .link {
+    margin-left: 2em;
+}
+
 .link:hover {
     opacity: 1;
     cursor: pointer;
