--- a/src/app/search/page.module.css
+++ b/src/app/search/page.module.css
@@ -7,6 +7,14 @@ grid-row-gap: 0px;
     height: 2600px;
 }
 
+@media only screen and (max-width: 992px) {
+    .main {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+
 .div1 { grid-area: 1 / 1 / 2 / 2; }
 .div2 {
     grid-area: 1 / 2 / 5 / 6;
