--- a/src/styles/organisms/footer.module.css
+++ b/src/styles/organisms/footer.module.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(3, auto);
     grid-template-rows: auto min-content;
     column-gap: clamp(25px, 10vw, 150px);
-    background-color: var(--color-grey-primary);
+    background-color: var(--color-grey-background);
 }
 
 /* Logo */
